--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,8 +47,9 @@ android {
 }
 
 dependencies {
+    // coil
+    implementation("io.coil-kt:coil-compose:2.0.0-rc01")
     //Navigating with Compose
-
     implementation("androidx.navigation:navigation-compose:$nav_version")
     // Integration with activities
     implementation 'androidx.activity:activity-compose:1.4.0'
