--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ android {
 }
 
 dependencies {
+    //recyclerview
+    implementation("androidx.recyclerview:recyclerview:1.2.1")
     // coil
     implementation("io.coil-kt:coil-compose:2.0.0-rc01")
     //Navigating with Compose
